AD : css de navbar

--- a/shopync/client/src/app/home-page/navbar/logo/logo.component.css
+++ b/shopync/client/src/app/home-page/navbar/logo/logo.component.css
@@ -4,7 +4,7 @@
 }
 
 .logo {
-    color: lightseagreen;
+    color: rgb(8, 141, 134);
     padding: 14px;
     font-size: 90px;;
     font-family: flashlight;
