--- a/shopync/client/src/app/home-page/navbar/navbar.component.html
+++ b/shopync/client/src/app/home-page/navbar/navbar.component.html
@@ -1,3 +1,21 @@
-<p>
-  navbar works!
-</p>
+<div class = navbar>
+
+  <div >
+    <app-logo> </app-logo>
+  </div>
+
+  <div class = menu-box>
+      <app-partners> </app-partners>
+  </div>
+
+  <div class = menu-box>
+      <app-contact></app-contact>
+  </div>
+
+  <div class = menu-box>
+      <app-login></app-login>
+  </div>
+
+</div>
+
+
