AD : creation de routing

--- a/shopync/client/src/app/home-page/navbar/navbar.component.css
+++ b/shopync/client/src/app/home-page/navbar/navbar.component.css
@@ -3,15 +3,20 @@
     src: url(roboto-Bold.ttf);
  }
 
- .navbar {
-     display: flex;
-     flex-direction: row;
-     background-color : rgb(173, 224, 222);
- }
+.navbar {
+    background-color : rgb(173, 224, 222);
+}
 
- .menu-box {
-     padding: 10px;
-     font-family: roboto;
-     
-     
- }
+.sections {
+display: flex;
+flex-direction: row;
+float:right;
+}
+
+.menu-box {
+vertical-align: middle;
+display: grid;
+cursor:pointer;
+padding: 10px;
+font-family: roboto;
+}
