--- a/shopync/client/src/app/home-page/navbar/navbar.component.html
+++ b/shopync/client/src/app/home-page/navbar/navbar.component.html
@@ -1,20 +1,25 @@
 <div class = navbar>
 
-  <div >
+  <div>
     <app-logo> </app-logo>
   </div>
 
-  <div class = menu-box>
-      <app-partners> </app-partners>
+  <div class = sections> 
+
+    <div class = menu-box>
+        <app-partners> </app-partners>
+    </div>
+  
+    <div class = menu-box>
+        <app-contact></app-contact>
+    </div>
+  
+    <div class = menu-box>
+        <app-login></app-login>
+    </div>
+    
   </div>
 
-  <div class = menu-box>
-      <app-contact></app-contact>
-  </div>
-
-  <div class = menu-box>
-      <app-login></app-login>
-  </div>
 
 </div>
 
