--- a/shopync/client/src/app/home-page/navbar/navbar.component.html
+++ b/shopync/client/src/app/home-page/navbar/navbar.component.html
@@ -1,24 +1,26 @@
 <div class = navbar>
 
-  <div>
-    <app-logo> </app-logo>
-  </div>
-
-  <div class = sections> 
-
-    <div class = menu-box>
-        <app-partners> </app-partners>
-    </div>
   
-    <div class = menu-box>
-        <app-contact></app-contact>
-    </div>
+   
+  <app-logo> </app-logo>
   
-    <div class = menu-box>
-        <app-login></app-login>
-    </div>
+  <div></div>
+
+      <div class = menu-box>
+          <app-partners></app-partners>
+      </div>
     
-  </div>
+      <div class = menu-box>
+          <app-contact></app-contact>
+      </div>
+    
+      <div class = menu-box>
+          <app-login></app-login>
+      </div>
+
+  
+
+
 
 
 </div>
