--- a/shopync/client/src/app/home-page/navbar/logo/logo.component.css
+++ b/shopync/client/src/app/home-page/navbar/logo/logo.component.css
@@ -6,6 +6,9 @@
 .logo {
     color: rgb(8, 141, 134);
     padding: 14px;
-    font-size: 90px;;
+    font-size: 70px;;
     font-family: flashlight;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
