--- a/shopync/client/src/app/home-page/navbar/navbar.component.html
+++ b/shopync/client/src/app/home-page/navbar/navbar.component.html
@@ -1,28 +1,23 @@
 <div class = navbar>
-
   
-   
   <app-logo> </app-logo>
   
   <div></div>
-
-      <div class = menu-box>
-          <app-partners></app-partners>
-      </div>
-    
-      <div class = menu-box>
-          <app-contact></app-contact>
-      </div>
-    
-      <div class = menu-box>
-          <app-login></app-login>
-      </div>
-
   
-
-
-
-
+  <div class = menu-box>
+    <app-partners></app-partners>
+  </div>
+  
+  <div class = menu-box>
+    <app-contact></app-contact>
+  </div>
+  
+  <div class = menu-box>
+    <app-login></app-login>
+  </div>
+  
+  
+  
+  <router-outlet></router-outlet>
 </div>
-
 
