AD : bouton start plus bo

--- a/shopync/client/src/app/home-page/welcome/welcome.component.html
+++ b/shopync/client/src/app/home-page/welcome/welcome.component.html
@@ -7,10 +7,10 @@
     You can tell us 
     what you want to buy,
     <div>
-      and we'll tell you how to go everywhere
+      and we'll tell you how to go everywhere in the fastest way
     </div>
     <div>
-      in the fastest way or where to go save the most.
+     or where to go to save the most.
     </div>
 </div>
 
