AD : ROUTERS FONCTIONNE OMG

--- a/shopync/client/src/app/home-page/welcome/start-button/start-button.component.html
+++ b/shopync/client/src/app/home-page/welcome/start-button/start-button.component.html
@@ -1,3 +1,3 @@
 <div class="wrapper">
-    <button class="button"> Start </button>
+    <a button class = "button" routerLink = "/page1"> Start </a>
 </div>
