--- a/shopync/client/src/app/home-page/navbar/navbar.component.html
+++ b/shopync/client/src/app/home-page/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div class = navbar>
   
-  <app-logo> </app-logo>
+  <a routerLink = "/homePage">
+  <app-logo></app-logo> </a>
   
   <div></div>
     <a routerLink = "/partners" class = menu-box>
